[package]
name = "crub"
version = "0.1.0"
edition = "2018"
authors = ["4t145 <u4t145@163.com>"]
include = ["/src", "/tree-sitter-c"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tree-sitter = "0.19.5"
regex = "1.5"
clap = {version = "3.0.0-beta.2", features = ["yaml"]}
toml = "0.5.8"
serde = {version = "1.0.126", features = ["derive"]}

[build-dependencies]
cc="*"

